--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dkeymap.html
@@ -83,6 +83,10 @@ Next: <a href="Emacspeak-Keybindings-On-emacspeak_002ddtk_002dsubmap.html" acces
 <dd><p>emacspeak-sounds-select-theme
 </p>
 </dd>
+<dt><span><kbd>.</kbd></span></dt>
+<dd><p>emacspeak-speak-whole-window
+</p>
+</dd>
 <dt><span><kbd>/</kbd></span></dt>
 <dd><p>emacspeak-speak-this-buffer-other-window-display
 </p>
