--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -86,6 +86,7 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><td></td><td valign="top"><a href="emacspeak_002dpianobar.html#index-_003cfn_003e-_0027"><code>&lt;fn&gt; '</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dpianobar.html">emacspeak-pianobar</a></td></tr>
 <tr><td></td><td valign="top"><a href="amixer.html#index-_003cfn_003e-_0028"><code>&lt;fn&gt; (</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="amixer.html">amixer</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dsounds.html#index-_003cfn_003e-_0029"><code>&lt;fn&gt; )</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dsounds.html">emacspeak-sounds</a></td></tr>
+<tr><td></td><td valign="top"><a href="emacspeak_002dspeak.html#index-_003cfn_003e-_002e"><code>&lt;fn&gt; .</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dspeak.html">emacspeak-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dwizards.html#index-_003cfn_003e-_002f"><code>&lt;fn&gt; /</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dwizards.html">emacspeak-wizards</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dspeak.html#index-_003cfn_003e-0"><code>&lt;fn&gt; 0</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dspeak.html">emacspeak-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dspeak.html#index-_003cfn_003e-1"><code>&lt;fn&gt; 1</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dspeak.html">emacspeak-speak</a></td></tr>
@@ -440,6 +441,7 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><td></td><td valign="top"><a href="emacspeak_002dpianobar.html#index-C_002de-_0027"><code>C-e '</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dpianobar.html">emacspeak-pianobar</a></td></tr>
 <tr><td></td><td valign="top"><a href="amixer.html#index-C_002de-_0028"><code>C-e (</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="amixer.html">amixer</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dsounds.html#index-C_002de-_0029"><code>C-e )</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dsounds.html">emacspeak-sounds</a></td></tr>
+<tr><td></td><td valign="top"><a href="emacspeak_002dspeak.html#index-C_002de-_002e"><code>C-e .</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dspeak.html">emacspeak-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="Reading.html#index-C_002de-_002f"><code>C-e /</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="Reading.html">Reading</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dwizards.html#index-C_002de-_002f-1"><code>C-e /</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dwizards.html">emacspeak-wizards</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dspeak.html#index-C_002de-0"><code>C-e 0</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dspeak.html">emacspeak-speak</a></td></tr>
