--- a/manual/emacspeak_002dmpv.html
+++ b/manual/emacspeak_002dmpv.html
@@ -79,7 +79,7 @@ commands require only one initial ress of C-e C-;.
 <span id="index-emacspeak_002dmpv_002dplay_002durl-1"></span>
 
 <div class="format">
-<pre class="format">Play URL using mpv. Prefix arg plays on left channel..
+<pre class="format">Play URL using mpv;  Prefix arg plays on left channel.
 
 (fn URL &amp;optional LEFT-CHANNEL)
 </pre></div>
