--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -145,6 +145,7 @@ from becoming dependent on the speech server modules
 <li><a href="#emacspeak_002dspeak_002dvisual_002dline">emacspeak-speak-visual-line</a></li>
 <li><a href="#emacspeak_002dspeak_002dvoice_002dannotate_002dparagraphs">emacspeak-speak-voice-annotate-paragraphs</a></li>
 <li><a href="#emacspeak_002dspeak_002dwhich_002dfunction">emacspeak-speak-which-function</a></li>
+<li><a href="#emacspeak_002dspeak_002dwhole_002dwindow">emacspeak-speak-whole-window</a></li>
 <li><a href="#emacspeak_002dspeak_002dwindow_002dinformation">emacspeak-speak-window-information</a></li>
 <li><a href="#emacspeak_002dspeak_002dword">emacspeak-speak-word</a></li>
 <li><a href="#emacspeak_002dspeak_002dword_002dinteractively">emacspeak-speak-word-interactively</a></li>
@@ -1606,8 +1607,25 @@ which-func without turning that mode on.
 </dd></dl>
 
 </div>
+<div class="subsubsection" id="emacspeak_002dspeak_002dwhole_002dwindow">
+<h4 class="subsubsection">12.179.1.82 emacspeak-speak-whole-window</h4>
+<dl class="def">
+<dt id="index-emacspeak_002dspeak_002dwhole_002dwindow"><span class="category">Command: </span><span><strong>emacspeak-speak-whole-window</strong><a href='#index-emacspeak_002dspeak_002dwhole_002dwindow' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-C_002de-_002e'><span><kbd>C-e .</kbd><a href='#index-C_002de-_002e' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-_003cfn_003e-_002e'><span><kbd>&lt;fn&gt; .</kbd><a href='#index-_003cfn_003e-_002e' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-emacspeak_002dspeak_002dwhole_002dwindow-1"></span>
+
+<div class="format">
+<pre class="format">Line to top, then Speak window contents in their entirety.
+</pre></div>
+</dd></dl>
+
+</div>
 <div class="subsubsection" id="emacspeak_002dspeak_002dwindow_002dinformation">
-<h4 class="subsubsection">12.179.1.82 emacspeak-speak-window-information</h4>
+<h4 class="subsubsection">12.179.1.83 emacspeak-speak-window-information</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dspeak_002dwindow_002dinformation-1"><span class="category">Command: </span><span><strong>emacspeak-speak-window-information</strong><a href='#index-emacspeak_002dspeak_002dwindow_002dinformation-1' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1624,7 +1642,7 @@ which-func without turning that mode on.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dspeak_002dword">
-<h4 class="subsubsection">12.179.1.83 emacspeak-speak-word</h4>
+<h4 class="subsubsection">12.179.1.84 emacspeak-speak-word</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dspeak_002dword-1"><span class="category">Command: </span><span><strong>emacspeak-speak-word</strong> <em>(&amp;optional arg)</em><a href='#index-emacspeak_002dspeak_002dword-1' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1647,7 +1665,7 @@ spelled out  instead of being spoken.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dspeak_002dword_002dinteractively">
-<h4 class="subsubsection">12.179.1.84 emacspeak-speak-word-interactively</h4>
+<h4 class="subsubsection">12.179.1.85 emacspeak-speak-word-interactively</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dspeak_002dword_002dinteractively"><span class="category">Command: </span><span><strong>emacspeak-speak-word-interactively</strong><a href='#index-emacspeak_002dspeak_002dword_002dinteractively' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002dspeak_002dword_002dinteractively-1"></span>
@@ -1662,7 +1680,7 @@ any other key to speak entire word.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dspeak_002dworld_002dclock">
-<h4 class="subsubsection">12.179.1.85 emacspeak-speak-world-clock</h4>
+<h4 class="subsubsection">12.179.1.86 emacspeak-speak-world-clock</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dspeak_002dworld_002dclock"><span class="category">Command: </span><span><strong>emacspeak-speak-world-clock</strong> <em>(zone &amp;optional set)</em><a href='#index-emacspeak_002dspeak_002dworld_002dclock' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002dspeak_002dworld_002dclock-1"></span>
@@ -1677,7 +1695,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dswitch_002dto_002dreference_002dbuffer">
-<h4 class="subsubsection">12.179.1.86 emacspeak-switch-to-reference-buffer</h4>
+<h4 class="subsubsection">12.179.1.87 emacspeak-switch-to-reference-buffer</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dswitch_002dto_002dreference_002dbuffer"><span class="category">Command: </span><span><strong>emacspeak-switch-to-reference-buffer</strong><a href='#index-emacspeak_002dswitch_002dto_002dreference_002dbuffer' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002dswitch_002dto_002dreference_002dbuffer-1"></span>
@@ -1689,7 +1707,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002daction_002dmode">
-<h4 class="subsubsection">12.179.1.87 emacspeak-toggle-action-mode</h4>
+<h4 class="subsubsection">12.179.1.88 emacspeak-toggle-action-mode</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002daction_002dmode"><span class="category">Command: </span><span><strong>emacspeak-toggle-action-mode</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002daction_002dmode' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002dtoggle_002daction_002dmode-1"></span>
@@ -1703,7 +1721,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002daudio_002dindentation">
-<h4 class="subsubsection">12.179.1.88 emacspeak-toggle-audio-indentation</h4>
+<h4 class="subsubsection">12.179.1.89 emacspeak-toggle-audio-indentation</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002daudio_002dindentation-1"><span class="category">Command: </span><span><strong>emacspeak-toggle-audio-indentation</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002daudio_002dindentation-1' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1726,7 +1744,7 @@ results in the number of initial spaces being spoken.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dcharacter_002decho">
-<h4 class="subsubsection">12.179.1.89 emacspeak-toggle-character-echo</h4>
+<h4 class="subsubsection">12.179.1.90 emacspeak-toggle-character-echo</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dcharacter_002decho-1"><span class="category">Command: </span><span><strong>emacspeak-toggle-character-echo</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002dcharacter_002decho-1' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1745,7 +1763,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dheader_002dline">
-<h4 class="subsubsection">12.179.1.90 emacspeak-toggle-header-line</h4>
+<h4 class="subsubsection">12.179.1.91 emacspeak-toggle-header-line</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dheader_002dline"><span class="category">Command: </span><span><strong>emacspeak-toggle-header-line</strong><a href='#index-emacspeak_002dtoggle_002dheader_002dline' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002dtoggle_002dheader_002dline-1"></span>
@@ -1757,7 +1775,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dline_002decho">
-<h4 class="subsubsection">12.179.1.91 emacspeak-toggle-line-echo</h4>
+<h4 class="subsubsection">12.179.1.92 emacspeak-toggle-line-echo</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dline_002decho-1"><span class="category">Command: </span><span><strong>emacspeak-toggle-line-echo</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002dline_002decho-1' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1776,7 +1794,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dmail_002dalert">
-<h4 class="subsubsection">12.179.1.92 emacspeak-toggle-mail-alert</h4>
+<h4 class="subsubsection">12.179.1.93 emacspeak-toggle-mail-alert</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dmail_002dalert"><span class="category">Command: </span><span><strong>emacspeak-toggle-mail-alert</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002dmail_002dalert' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1797,7 +1815,7 @@ indicating the arrival  of new mail when displaying the mode line.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dshow_002dpoint">
-<h4 class="subsubsection">12.179.1.93 emacspeak-toggle-show-point</h4>
+<h4 class="subsubsection">12.179.1.94 emacspeak-toggle-show-point</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dshow_002dpoint"><span class="category">Command: </span><span><strong>emacspeak-toggle-show-point</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002dshow_002dpoint' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1816,7 +1834,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter">
-<h4 class="subsubsection">12.179.1.94 emacspeak-toggle-speak-line-invert-filter</h4>
+<h4 class="subsubsection">12.179.1.95 emacspeak-toggle-speak-line-invert-filter</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter"><span class="category">Command: </span><span><strong>emacspeak-toggle-speak-line-invert-filter</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1835,7 +1853,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dspeak_002dmessages">
-<h4 class="subsubsection">12.179.1.95 emacspeak-toggle-speak-messages</h4>
+<h4 class="subsubsection">12.179.1.96 emacspeak-toggle-speak-messages</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dspeak_002dmessages"><span class="category">Command: </span><span><strong>emacspeak-toggle-speak-messages</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002dspeak_002dmessages' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1852,7 +1870,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dtoggle_002dword_002decho">
-<h4 class="subsubsection">12.179.1.96 emacspeak-toggle-word-echo</h4>
+<h4 class="subsubsection">12.179.1.97 emacspeak-toggle-word-echo</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dtoggle_002dword_002decho-1"><span class="category">Command: </span><span><strong>emacspeak-toggle-word-echo</strong> <em>(&amp;optional prefix)</em><a href='#index-emacspeak_002dtoggle_002dword_002decho-1' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1871,7 +1889,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dview_002dnotifications">
-<h4 class="subsubsection">12.179.1.97 emacspeak-view-notifications</h4>
+<h4 class="subsubsection">12.179.1.98 emacspeak-view-notifications</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dview_002dnotifications"><span class="category">Command: </span><span><strong>emacspeak-view-notifications</strong><a href='#index-emacspeak_002dview_002dnotifications' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
@@ -1889,7 +1907,7 @@ current local  value to the result.
 
 </div>
 <div class="subsubsection" id="emacspeak_002dzap_002dtts">
-<h4 class="subsubsection">12.179.1.98 emacspeak-zap-tts</h4>
+<h4 class="subsubsection">12.179.1.99 emacspeak-zap-tts</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dzap_002dtts"><span class="category">Command: </span><span><strong>emacspeak-zap-tts</strong><a href='#index-emacspeak_002dzap_002dtts' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
