--- a/manual/Emacspeak-Keybindings-On-emacspeak_002ddtk_002dsubmap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002ddtk_002dsubmap.html
@@ -196,6 +196,10 @@ Next: <a href="Emacspeak-Keybindings-On-emacspeak_002dhyper_002dkeymap.html" acc
 <dd><p>dtk-set-punctuations
 </p>
 </dd>
+<dt><span><kbd>q</kbd></span></dt>
+<dd><p>dtk-toggle-quiet
+</p>
+</dd>
 <dt><span><kbd>r</kbd></span></dt>
 <dd><p>dtk-set-rate
 </p>
