--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -210,6 +210,7 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-_003cfn_003e-d-o"><code>&lt;fn&gt; d o</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-_003cfn_003e-d-P"><code>&lt;fn&gt; d P</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-_003cfn_003e-d-p"><code>&lt;fn&gt; d p</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
+<tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-_003cfn_003e-d-q"><code>&lt;fn&gt; d q</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-_003cfn_003e-d-R"><code>&lt;fn&gt; d R</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-_003cfn_003e-d-r"><code>&lt;fn&gt; d r</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-_003cfn_003e-d-RET"><code>&lt;fn&gt; d RET</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
@@ -589,6 +590,7 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-C_002de-d-P"><code>C-e d P</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-C_002de-d-p-1"><code>C-e d p</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="Miscellaneous.html#index-C_002de-d-q"><code>C-e d q</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="Miscellaneous.html">Miscellaneous</a></td></tr>
+<tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-C_002de-d-q-1"><code>C-e d q</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="Speech-Output-Control.html#index-C_002de-d-r"><code>C-e d r</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="Speech-Output-Control.html">Speech Output  Control</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-C_002de-d-R"><code>C-e d R</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
 <tr><td></td><td valign="top"><a href="dtk_002dspeak.html#index-C_002de-d-r-1"><code>C-e d r</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="dtk_002dspeak.html">dtk-speak</a></td></tr>
