--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -513,7 +513,12 @@ Interactive PREFIX arg makes the new setting global.
 <h4 class="subsubsection">12.5.1.22 dtk-toggle-quiet</h4>
 <dl class="def">
 <dt id="index-dtk_002dtoggle_002dquiet-1"><span class="category">Command: </span><span><strong>dtk-toggle-quiet</strong> <em>(&amp;optional prefix)</em><a href='#index-dtk_002dtoggle_002dquiet-1' class='copiable-anchor'> &para;</a></span></dt>
-<dd><span id="index-dtk_002dtoggle_002dquiet-2"></span>
+<dd><dl compact="compact">
+<dt id='index-C_002de-d-q-1'><span><kbd>C-e d q</kbd><a href='#index-C_002de-d-q-1' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-_003cfn_003e-d-q'><span><kbd>&lt;fn&gt; d q</kbd><a href='#index-_003cfn_003e-d-q' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-dtk_002dtoggle_002dquiet-2"></span>
 
 <div class="format">
 <pre class="format">Toggles state of  dtk-quiet.
