--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -1636,7 +1636,7 @@ which-func without turning that mode on.
 <span id="index-emacspeak_002dspeak_002dwindowful-1"></span>
 
 <div class="format">
-<pre class="format">Line to top, then Speak window contents in their entirety.
+<pre class="format">Line to top, then Speak window contents.
 </pre></div>
 </dd></dl>
 
