--- a/manual/emacspeak_002damark.html
+++ b/manual/emacspeak_002damark.html
@@ -56,8 +56,10 @@ path:  filename containing  marked
 name: Bookmark tag
 Position: time offset from start
 </p>
-<p>This library will be used from emacspeak-m-player,
-to set and jump to bookmarks.
+<p>This library will be used from emacspeak-m-player to set and jump
+to bookmarks. Amarks are stored in a .amarks.el file in the working
+directory.  It also provides a simple AMark Browser to use from a
+directory containing mp3 files where Amarks have been created.
 </p>
 <ul class="section-toc">
 <li><a href="#Emacspeak_002dAmark-Commands" accesskey="1">Emacspeak-Amark Commands</a></li>
@@ -99,7 +101,7 @@ given name, it is updated with path and position.
 <span id="index-emacspeak_002damark_002dbrowse-1"></span>
 
 <div class="format">
-<pre class="format">Browse  nearest amarks file.
+<pre class="format">Browse   amarks  in current directory.
 </pre></div>
 </dd></dl>
 
@@ -131,6 +133,11 @@ given name, it is updated with path and position.
 
 </div>
 </div>
+</div>
+<hr>
+<div class="header">
+<p>
+Next: <a href="emacspeak_002danalog.html">emacspeak-analog</a>, Previous: <a href="emacspeak_002dadvice.html">emacspeak-advice</a>, Up: <a href="Emacspeak-Commands-And-Options.html">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
 </div>
 
 
