--- a/manual/emacspeak_002dcompile.html
+++ b/manual/emacspeak_002dcompile.html
@@ -70,8 +70,7 @@
     <span id="emacspeak_002dcompile-1"></span>
     <h3 class="section">12.38 emacspeak-compile</h3>
     <p>This module makes compiling code from inside Emacs speech
-    friendly. It is an example of how a little amount of code can
-    make Emacspeak even better.</p>
+    friendly.</p>
     <ul class="section-toc">
       <li><a href="#Emacspeak_002dCompile-Commands" accesskey=
       "1">Emacspeak-Compile Commands</a></li>
