--- a/manual/emacspeak_002dfolding.html
+++ b/manual/emacspeak_002dfolding.html
@@ -71,9 +71,8 @@
     <h3 class="section">12.83 emacspeak-folding</h3>
     <p>Folding mode turns emacs into a folding editor. Folding mode
     is what I use: emacs 19 comes with similar packages, e.g.
-    allout.el This module defines some advice forms that make
-    folding mode a pleasure to use. Think of a fold as a
-    container.</p>
+    allout.el This module defines some advice forms for folding
+    mode Think of a fold as a container.</p>
   </div>
 </body>
 </html>
