--- a/manual/emacspeak_002dwebspace.html
+++ b/manual/emacspeak_002dwebspace.html
@@ -147,7 +147,7 @@ Optional interactive prefix arg forces a refresh.
             "index-emacspeak_002dwebspace_002dfilter-1"></span>
             <div class="format">
               <pre class=
-              "format">Open headline at point by following its link property and filter for content.
+              "format">Open headline at point and filter for content.
 </pre>
             </div>
           </dd>
