--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dhyper_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dhyper_002dkeymap.html
@@ -96,12 +96,11 @@
       </dd>
       <dt><span><kbd>:</kbd></span></dt>
       <dd>
-        <p>
-        emacspeak-wizards-view-buffers-filtered-by-m-player-mode</p>
+        <p>emacspeak-m-player-using-openal</p>
       </dd>
       <dt><span><kbd>;</kbd></span></dt>
       <dd>
-        <p>emacspeak-m-player-using-openal</p>
+        <p>emacspeak-multimedia</p>
       </dd>
       <dt><span><kbd>C-a</kbd></span></dt>
       <dd>
