--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2983,11 +2983,11 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html#index-C_002d_003b-_003a"><code>C-;
-        :</code></a>:</td>
+        "emacspeak_002dm_002dplayer.html#index-C_002d_003b-_003a"><code>
+        C-; :</code></a>:</td>
         <td>&nbsp;</td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+        "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
       </tr>
       <tr>
         <td></td>
@@ -6399,11 +6399,11 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html#index-C_002dx-_0040-h-_003a"><code>
-        C-x @ h :</code></a>:</td>
+        "emacspeak_002dm_002dplayer.html#index-C_002dx-_0040-h-_003a">
+        <code>C-x @ h :</code></a>:</td>
         <td>&nbsp;</td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+        "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
       </tr>
       <tr>
         <td></td>
