--- a/manual/emacspeak_002determ.html
+++ b/manual/emacspeak_002determ.html
@@ -1142,10 +1142,10 @@ without sending input to the terminal itself.
             "index-emacspeak_002dtoggle_002determ_002dautospeak-1"></span>
             <div class="format">
               <pre class="format">Toggle state of eterm autospeak.
-When eterm autospeak is turned on and the terminal is in line mode,
-all output to the terminal is automatically spoken.
-  Interactive prefix arg means toggle  the global default value, and then set the
-  current local  value to the result. 
+When eterm autospeak is turned on and the terminal is in line
+mode, all output to the terminal is automatically spoken.
+Interactive prefix arg means toggle the global default value, and
+then set the current local value to the result.
 </pre>
             </div>
           </dd>
