--- a/manual/emacspeak_002dhide.html
+++ b/manual/emacspeak_002dhide.html
@@ -141,6 +141,8 @@
               <pre class="format">Hide or expose a block of text.
  Optional interactive prefix arg causes all blocks in current
 buffer to be hidden or exposed.
+
+(fn &amp;optional PREFIX)
 </pre>
             </div>
           </dd>
