--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -2198,11 +2198,11 @@ This will work if the soundcard is set to 48000.
           class='copiable-anchor'>¶</a></span></dt>
           <dd>
             <dl compact="compact">
-              <dt id='index-C_002d_003b-_003b'><span><kbd>C-;
-              ;</kbd> <a href='#index-C_002d_003b-_003b' class=
+              <dt id='index-C_002d_003b-_003a'><span><kbd>C-;
+              :</kbd> <a href='#index-C_002d_003b-_003a' class=
               'copiable-anchor'>¶</a></span></dt>
-              <dt id='index-C_002dx-_0040-h-_003b'><span><kbd>C-x @
-              h ;</kbd> <a href='#index-C_002dx-_0040-h-_003b'
+              <dt id='index-C_002dx-_0040-h-_003a'><span><kbd>C-x @
+              h :</kbd> <a href='#index-C_002dx-_0040-h-_003a'
               class='copiable-anchor'>¶</a></span></dt>
             </dl><span id=
             "index-emacspeak_002dm_002dplayer_002dusing_002dopenal-1"></span>
@@ -2412,10 +2412,16 @@ This will work if the soundcard is set to 48000.
               <dt id='index-C_002de-_003b'><span><kbd>C-e ;</kbd>
               <a href='#index-C_002de-_003b' class=
               'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-C_002d_003b-_003b'><span><kbd>C-;
+              ;</kbd> <a href='#index-C_002d_003b-_003b' class=
+              'copiable-anchor'>¶</a></span></dt>
               <dt id='index-_003cfn_003e-_003b'>
               <span><kbd>&lt;fn&gt; ;</kbd> <a href=
               '#index-_003cfn_003e-_003b' class=
               'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-C_002dx-_0040-h-_003b'><span><kbd>C-x @
+              h ;</kbd> <a href='#index-C_002dx-_0040-h-_003b'
+              class='copiable-anchor'>¶</a></span></dt>
             </dl><span id=
             "index-emacspeak_002dmultimedia-1"></span>
             <div class="format">
