--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -3665,15 +3665,9 @@ the final or penultimate step during initialization.
           '#index-emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode'
           class='copiable-anchor'>¶</a></span></dt>
           <dd>
-            <dl compact="compact">
-              <dt id='index-C_002d_003b-_003a'><span><kbd>C-;
-              :</kbd> <a href='#index-C_002d_003b-_003a' class=
-              'copiable-anchor'>¶</a></span></dt>
-              <dt id='index-C_002dx-_0040-h-_003a'><span><kbd>C-x @
-              h :</kbd> <a href='#index-C_002dx-_0040-h-_003a'
-              class='copiable-anchor'>¶</a></span></dt>
-            </dl><span id=
-            "index-emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode-1"></span>
+            <span id=
+            "index-emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode-1">
+            </span>
             <div class="format">
               <pre class=
               "format">Buffer menu filtered by  m-player mode.
