--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -130,13 +130,11 @@
           <p>Default Value: <code><tt>(('
           emacspeak-m-player-using-hrtf) (, previous-buffer) (.
           next-buffer) (/ emacspeak-websearch-google-with-toolbelt)
-          (:
-          emacspeak-wizards-view-buffers-filtered-by-m-player-mode)
-          (; emacspeak-m-player-using-openal) (C-a
-          emacspeak-wizards-term) (C-b eww-list-bookmarks) (C-d
-          dictionary-search) (C-e eshell) (C-j
-          emacspeak-wizards-shell-toggle) (C-l emacspeak-librivox)
-          (C-o eaf-open-browser) (C-t
+          (: emacspeak-m-player-using-openal) (;
+          emacspeak-multimedia) (C-a emacspeak-wizards-term) (C-b
+          eww-list-bookmarks) (C-d dictionary-search) (C-e eshell)
+          (C-j emacspeak-wizards-shell-toggle) (C-l
+          emacspeak-librivox) (C-o eaf-open-browser) (C-t
           emacspeak-wizards-tramp-open-location) (DEL
           emacspeak-wizards-snarf-sexp) (TAB hippie-expand) (a
           emacspeak-amark-browse) (b eww-list-buffers) (c
