--- a/manual/emacspeak_002dorg.html
+++ b/manual/emacspeak_002dorg.html
@@ -89,29 +89,31 @@
         <li><a href=
         "#emacspeak_002dorg_002dpopup_002dinput_002dbuffer"
         accesskey="3">emacspeak-org-popup-input-buffer</a></li>
+        <li><a href="#emacspeak_002dorg_002dspeak_002ditem"
+        accesskey="4">emacspeak-org-speak-item</a></li>
         <li><a href=
         "#emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement"
         accesskey=
-        "4">emacspeak-org-table-speak-both-headers-and-element</a></li>
+        "5">emacspeak-org-table-speak-both-headers-and-element</a></li>
         <li><a href=
         "#emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader"
         accesskey=
-        "5">emacspeak-org-table-speak-column-header</a></li>
+        "6">emacspeak-org-table-speak-column-header</a></li>
         <li><a href=
         "#emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader_002dand_002delement"
         accesskey=
-        "6">emacspeak-org-table-speak-column-header-and-element</a></li>
+        "7">emacspeak-org-table-speak-column-header-and-element</a></li>
         <li><a href=
         "#emacspeak_002dorg_002dtable_002dspeak_002dcoordinates"
         accesskey=
-        "7">emacspeak-org-table-speak-coordinates</a></li>
+        "8">emacspeak-org-table-speak-coordinates</a></li>
         <li><a href=
         "#emacspeak_002dorg_002dtable_002dspeak_002dcurrent_002delement"
         accesskey=
-        "8">emacspeak-org-table-speak-current-element</a></li>
+        "9">emacspeak-org-table-speak-current-element</a></li>
         <li><a href=
-        "#emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader"
-        accesskey="9">emacspeak-org-table-speak-row-header</a></li>
+        "#emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader">
+        emacspeak-org-table-speak-row-header</a></li>
         <li><a href=
         "#emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader_002dand_002delement">
         emacspeak-org-table-speak-row-header-and-element</a></li>
@@ -198,8 +200,28 @@ arg just opens the file
         </dl>
       </div>
       <div class="subsubsection" id=
-      "emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement">
+      "emacspeak_002dorg_002dspeak_002ditem">
         <h4 class="subsubsection">12.139.1.4
+        emacspeak-org-speak-item</h4>
+        <dl class="def">
+          <dt id="index-emacspeak_002dorg_002dspeak_002ditem">
+          <span class="category">Command:</span>
+          <span><strong>emacspeak-org-speak-item</strong> <a href=
+          '#index-emacspeak_002dorg_002dspeak_002ditem' class=
+          'copiable-anchor'>¶</a></span></dt>
+          <dd>
+            <span id=
+            "index-emacspeak_002dorg_002dspeak_002ditem-1"></span>
+            <div class="format">
+              <pre class="format">Speak item
+</pre>
+            </div>
+          </dd>
+        </dl>
+      </div>
+      <div class="subsubsection" id=
+      "emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement">
+        <h4 class="subsubsection">12.139.1.5
         emacspeak-org-table-speak-both-headers-and-element</h4>
         <dl class="def">
           <dt id=
@@ -222,7 +244,7 @@ arg just opens the file
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader">
-        <h4 class="subsubsection">12.139.1.5
+        <h4 class="subsubsection">12.139.1.6
         emacspeak-org-table-speak-column-header</h4>
         <dl class="def">
           <dt id=
@@ -245,7 +267,7 @@ arg just opens the file
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader_002dand_002delement">
-        <h4 class="subsubsection">12.139.1.6
+        <h4 class="subsubsection">12.139.1.7
         emacspeak-org-table-speak-column-header-and-element</h4>
         <dl class="def">
           <dt id=
@@ -268,7 +290,7 @@ arg just opens the file
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dorg_002dtable_002dspeak_002dcoordinates">
-        <h4 class="subsubsection">12.139.1.7
+        <h4 class="subsubsection">12.139.1.8
         emacspeak-org-table-speak-coordinates</h4>
         <dl class="def">
           <dt id=
@@ -291,7 +313,7 @@ arg just opens the file
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dorg_002dtable_002dspeak_002dcurrent_002delement">
-        <h4 class="subsubsection">12.139.1.8
+        <h4 class="subsubsection">12.139.1.9
         emacspeak-org-table-speak-current-element</h4>
         <dl class="def">
           <dt id=
@@ -314,7 +336,7 @@ arg just opens the file
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader">
-        <h4 class="subsubsection">12.139.1.9
+        <h4 class="subsubsection">12.139.1.10
         emacspeak-org-table-speak-row-header</h4>
         <dl class="def">
           <dt id=
@@ -337,7 +359,7 @@ arg just opens the file
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader_002dand_002delement">
-        <h4 class="subsubsection">12.139.1.10
+        <h4 class="subsubsection">12.139.1.11
         emacspeak-org-table-speak-row-header-and-element</h4>
         <dl class="def">
           <dt id=
@@ -364,9 +386,21 @@ arg just opens the file
       <dl class="def">
         <dt id="index-User-Option-73"><span class=
         "category">Variable:</span> <span><strong>User
+        Option</strong> <em>emacspeak-org-hotlist</em> <a href=
+        '#index-User-Option-73' class=
+        'copiable-anchor'>¶</a></span></dt>
+        <dd>
+          <p>Emacspeak org hotlist location.</p>
+          <p>Default Value:
+          <code><tt>/home/raman/.org/hotlist.org</tt></code></p>
+        </dd>
+      </dl>
+      <dl class="def">
+        <dt id="index-User-Option-74"><span class=
+        "category">Variable:</span> <span><strong>User
         Option</strong>
         <em>emacspeak-org-table-after-movement-function</em>
-        <a href='#index-User-Option-73' class=
+        <a href='#index-User-Option-74' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>The function to call after moving in a table</p>
