--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -3051,7 +3051,8 @@ of the source buffer.
             "index-emacspeak_002dwizards_002dshell_002ddirectory_002dreset-1"></span>
             <div class="format">
               <pre class=
-              "format">Set current directory to this shell’s initial directory if one was defined.
+              "format">Set current directory to this shell’s initial directory if one was
+defined.  If not in a shell buffer, switch to our Home shell buffer.
 </pre>
             </div>
           </dd>
@@ -3714,10 +3715,10 @@ the final or penultimate step during initialization.
       <h4 class="subsection">12.214.2 emacspeak-wizards
       Options</h4>
       <dl class="def">
-        <dt id="index-User-Option-97"><span class=
+        <dt id="index-User-Option-98"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong> <em>emacspeak-brightness-autoblack</em>
-        <a href='#index-User-Option-97' class=
+        <a href='#index-User-Option-98' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>Set to T to automatically turn display black.</p>
@@ -3725,10 +3726,10 @@ the final or penultimate step during initialization.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-98"><span class=
+        <dt id="index-User-Option-99"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong> <em>emacspeak-iex-api-key</em> <a href=
-        '#index-User-Option-98' class=
+        '#index-User-Option-99' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>Web API key for IEX Finance access. See IEX Login
@@ -3738,11 +3739,11 @@ the final or penultimate step during initialization.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-99"><span class=
+        <dt id="index-User-Option-100"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong>
         <em>emacspeak-speak-telephone-directory</em> <a href=
-        '#index-User-Option-99' class=
+        '#index-User-Option-100' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>File holding telephone directory. This is just a text
@@ -3752,11 +3753,11 @@ the final or penultimate step during initialization.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-100"><span class=
+        <dt id="index-User-Option-101"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong>
         <em>emacspeak-wizards-alpha-vantage-api-key</em> <a href=
-        '#index-User-Option-100' class=
+        '#index-User-Option-101' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>API Key used to retrieve stock data from
@@ -3767,11 +3768,11 @@ the final or penultimate step during initialization.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-101"><span class=
+        <dt id="index-User-Option-102"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong>
         <em>emacspeak-wizards-pdf-to-text-options</em> <a href=
-        '#index-User-Option-101' class=
+        '#index-User-Option-102' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>options to Command for running pdftotext.</p>
@@ -3779,11 +3780,11 @@ the final or penultimate step during initialization.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-102"><span class=
+        <dt id="index-User-Option-103"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong>
         <em>emacspeak-wizards-personal-portfolio</em> <a href=
-        '#index-User-Option-102' class=
+        '#index-User-Option-103' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>Set this to the stock tickers you want to check.
@@ -3795,10 +3796,10 @@ the final or penultimate step during initialization.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-103"><span class=
+        <dt id="index-User-Option-104"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong> <em>emacspeak-wizards-project-shells</em>
-        <a href='#index-User-Option-103' class=
+        <a href='#index-User-Option-104' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>List of shell-name/initial-directory pairs.</p>
@@ -3806,11 +3807,11 @@ the final or penultimate step during initialization.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-104"><span class=
+        <dt id="index-User-Option-105"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong>
         <em>emacspeak-wizards-remote-workstation</em> <a href=
-        '#index-User-Option-104' class=
+        '#index-User-Option-105' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>Name of remote workstation.</p>
