--- a/manual/index.html
+++ b/manual/index.html
@@ -56,7 +56,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on September 13, 2022.</p>
+  Desktop</strong> and was last updated on September 14, 2022.</p>
   <div class="top" id="Top">
     <div class="header">
       <p>Next: <a href="Copyright.html" accesskey="n" rel=
@@ -6694,12 +6694,19 @@
                       12.139.1.3
                       emacspeak-org-popup-input-buffer</a></li>
                       <li><a id=
+                      "toc-emacspeak_002dorg_002dspeak_002ditem"
+                      href=
+                      "emacspeak_002dorg.html#emacspeak_002dorg_002dspeak_002ditem"
+                      name=
+                      "toc-emacspeak_002dorg_002dspeak_002ditem">12.139.1.4
+                      emacspeak-org-speak-item</a></li>
+                      <li><a id=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement"
                       href=
                       "emacspeak_002dorg.html#emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement"
                       name=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dboth_002dheaders_002dand_002delement">
-                      12.139.1.4
+                      12.139.1.5
                       emacspeak-org-table-speak-both-headers-and-element</a></li>
                       <li><a id=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader"
@@ -6707,7 +6714,7 @@
                       "emacspeak_002dorg.html#emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader"
                       name=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader">
-                      12.139.1.5
+                      12.139.1.6
                       emacspeak-org-table-speak-column-header</a></li>
                       <li><a id=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader_002dand_002delement"
@@ -6715,7 +6722,7 @@
                       "emacspeak_002dorg.html#emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader_002dand_002delement"
                       name=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcolumn_002dheader_002dand_002delement">
-                      12.139.1.6
+                      12.139.1.7
                       emacspeak-org-table-speak-column-header-and-element</a></li>
                       <li><a id=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcoordinates"
@@ -6723,7 +6730,7 @@
                       "emacspeak_002dorg.html#emacspeak_002dorg_002dtable_002dspeak_002dcoordinates"
                       name=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcoordinates">
-                      12.139.1.7
+                      12.139.1.8
                       emacspeak-org-table-speak-coordinates</a></li>
                       <li><a id=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcurrent_002delement"
@@ -6731,7 +6738,7 @@
                       "emacspeak_002dorg.html#emacspeak_002dorg_002dtable_002dspeak_002dcurrent_002delement"
                       name=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002dcurrent_002delement">
-                      12.139.1.8
+                      12.139.1.9
                       emacspeak-org-table-speak-current-element</a></li>
                       <li><a id=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader"
@@ -6739,7 +6746,7 @@
                       "emacspeak_002dorg.html#emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader"
                       name=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader">
-                      12.139.1.9
+                      12.139.1.10
                       emacspeak-org-table-speak-row-header</a></li>
                       <li><a id=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader_002dand_002delement"
@@ -6747,7 +6754,7 @@
                       "emacspeak_002dorg.html#emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader_002dand_002delement"
                       name=
                       "toc-emacspeak_002dorg_002dtable_002dspeak_002drow_002dheader_002dand_002delement">
-                      12.139.1.10
+                      12.139.1.11
                       emacspeak-org-table-speak-row-header-and-element</a></li>
                     </ul>
                   </li>
