--- a/manual/emacspeak_002dfeeds.html
+++ b/manual/emacspeak_002dfeeds.html
@@ -357,9 +357,7 @@ Archiving is useful when synchronizing feeds across multiple machines.
         <dd>
           <p>Table of RSS/Atom feeds. The feed list is persisted to
           file saved-feeds on exit.</p>
-          <p>Default Value: <code><tt>((BBC News
-          http://www.bbc.co.uk/syndication/feeds/news/ukfs_news/front_page/rss091.xml
-          rss) (BBC Podcast Directory
+          <p>Default Value: <code><tt>((BBC Podcast Directory
           http://www.bbc.co.uk/podcasts.opml opml) (CNet Tech News
           http://feeds.feedburner.com/cnet/tcoc rss) (Wired News
           http://www.wired.com/news_drop/netcenter/netcenter.rdf
