--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -99,8 +99,6 @@
         <li>Brightness: <kbd>print</kbd> Control display brightness
         using light.</li>
         <li>Navigate: <kbd>s-n</kbd> Navigate with ease.</li>
-        <li>org-mode structure nav: <kbd>C-c C-SPC</kbd> Navigation
-        for org-mode.</li>
         <li>org-mode tables: <kbd>C-c t</kbd> Table UI for org-mode
         tables.</li>
         <li>hideshow: C-, h Provide HideShow bindings.</li>
@@ -140,17 +138,15 @@
         <li><a href="#emacspeak_002dmuggles_002dnavigate_002fbody"
         accesskey="6">emacspeak-muggles-navigate/body</a></li>
         <li><a href=
-        "#emacspeak_002dmuggles_002dorg_002dnav_002fbody"
-        accesskey="7">emacspeak-muggles-org-nav/body</a></li>
-        <li><a href=
         "#emacspeak_002dmuggles_002dorg_002dtable_002fbody"
-        accesskey="8">emacspeak-muggles-org-table/body</a></li>
+        accesskey="7">emacspeak-muggles-org-table/body</a></li>
         <li><a href=
         "#emacspeak_002dmuggles_002dtoggle_002doption_002fbody"
-        accesskey="9">emacspeak-muggles-toggle-option/body</a></li>
+        accesskey="8">emacspeak-muggles-toggle-option/body</a></li>
         <li><a href=
-        "#emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody">
-        emacspeak-muggles-undo-only/undo-redo/body</a></li>
+        "#emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"
+        accesskey=
+        "9">emacspeak-muggles-undo-only/undo-redo/body</a></li>
         <li><a href=
         "#emacspeak_002dmuggles_002dyank_002dpop_002fbody">emacspeak-muggles-yank-pop/body</a></li>
       </ul>
@@ -381,45 +377,8 @@ The body can be accessed via ‘emacspeak-muggles-navigate/body’.
         </dl>
       </div>
       <div class="subsubsection" id=
-      "emacspeak_002dmuggles_002dorg_002dnav_002fbody">
-        <h4 class="subsubsection">12.130.3.7
-        emacspeak-muggles-org-nav/body</h4>
-        <dl class="def">
-          <dt id=
-          "index-emacspeak_002dmuggles_002dorg_002dnav_002fbody">
-          <span class="category">Command:</span>
-          <span><strong>emacspeak-muggles-org-nav/body</strong>
-          <a href=
-          '#index-emacspeak_002dmuggles_002dorg_002dnav_002fbody'
-          class='copiable-anchor'>¶</a></span></dt>
-          <dd>
-            <span id=
-            "index-emacspeak_002dmuggles_002dorg_002dnav_002fbody-1">
-            </span>
-            <div class="format">
-              <pre class=
-              "format">Call the body in the "emacspeak-muggles-org-nav" hydra.
-
-The heads for the associated hydra are:
-
-"?":    ‘(emacspeak-hydra-self-help "emacspeak-muggles-org-nav")’,
-"SPC":    ‘emacspeak-outline-speak-this-heading’,
-"n":    ‘emacspeak-outline-speak-next-heading’,
-"p":    ‘emacspeak-outline-speak-previous-heading’,
-"f":    ‘org-forward-heading-same-level’,
-"b":    ‘org-backward-heading-same-level’,
-"u":    ‘outline-up-heading’,
-"g":    ‘org-goto’
-
-The body can be accessed via ‘emacspeak-muggles-org-nav/body’.
-</pre>
-            </div>
-          </dd>
-        </dl>
-      </div>
-      <div class="subsubsection" id=
       "emacspeak_002dmuggles_002dorg_002dtable_002fbody">
-        <h4 class="subsubsection">12.130.3.8
+        <h4 class="subsubsection">12.130.3.7
         emacspeak-muggles-org-table/body</h4>
         <dl class="def">
           <dt id=
@@ -458,7 +417,7 @@ The body can be accessed via ‘emacspeak-muggles-org-table/body’.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dmuggles_002dtoggle_002doption_002fbody">
-        <h4 class="subsubsection">12.130.3.9
+        <h4 class="subsubsection">12.130.3.8
         emacspeak-muggles-toggle-option/body</h4>
         <dl class="def">
           <dt id=
@@ -502,7 +461,7 @@ The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody">
-        <h4 class="subsubsection">12.130.3.10
+        <h4 class="subsubsection">12.130.3.9
         emacspeak-muggles-undo-only/undo-redo/body</h4>
         <dl class="def">
           <dt id=
@@ -537,7 +496,7 @@ The body can be accessed via ‘emacspeak-muggles-undo-only/undo-redo/body’.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dmuggles_002dyank_002dpop_002fbody">
-        <h4 class="subsubsection">12.130.3.11
+        <h4 class="subsubsection">12.130.3.10
         emacspeak-muggles-yank-pop/body</h4>
         <dl class="def">
           <dt id=
