--- a/manual/emacspeak_002dsudoku.html
+++ b/manual/emacspeak_002dsudoku.html
@@ -70,8 +70,7 @@
     <span id="emacspeak_002dsudoku-1"></span>
     <h3 class="section">12.182 emacspeak-sudoku</h3>
     <p>Playing SuDoku using speech output. Written to discover what
-    type of feedback one needs for this task. See
-    http://emacspeak.blogspot.com/2006/02/playing-sudoku-using-auditory-feedback.html</p>
+    type of feedback one needs for this task.</p>
     <ul class="section-toc">
       <li><a href="#Emacspeak_002dSudoku-Commands" accesskey=
       "1">Emacspeak-Sudoku Commands</a></li>
