--- a/manual/index.html
+++ b/manual/index.html
@@ -56,7 +56,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on September 14, 2022.</p>
+  Desktop</strong> and was last updated on September 15, 2022.</p>
   <div class="top" id="Top">
     <div class="header">
       <p>Next: <a href="Copyright.html" accesskey="n" rel=
@@ -6419,20 +6419,12 @@
                       12.130.3.6
                       emacspeak-muggles-navigate/body</a></li>
                       <li><a id=
-                      "toc-emacspeak_002dmuggles_002dorg_002dnav_002fbody"
-                      href=
-                      "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dorg_002dnav_002fbody"
-                      name=
-                      "toc-emacspeak_002dmuggles_002dorg_002dnav_002fbody">
-                      12.130.3.7
-                      emacspeak-muggles-org-nav/body</a></li>
-                      <li><a id=
                       "toc-emacspeak_002dmuggles_002dorg_002dtable_002fbody"
                       href=
                       "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dorg_002dtable_002fbody"
                       name=
                       "toc-emacspeak_002dmuggles_002dorg_002dtable_002fbody">
-                      12.130.3.8
+                      12.130.3.7
                       emacspeak-muggles-org-table/body</a></li>
                       <li><a id=
                       "toc-emacspeak_002dmuggles_002dtoggle_002doption_002fbody"
@@ -6440,7 +6432,7 @@
                       "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dtoggle_002doption_002fbody"
                       name=
                       "toc-emacspeak_002dmuggles_002dtoggle_002doption_002fbody">
-                      12.130.3.9
+                      12.130.3.8
                       emacspeak-muggles-toggle-option/body</a></li>
                       <li><a id=
                       "toc-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"
@@ -6448,7 +6440,7 @@
                       "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"
                       name=
                       "toc-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody">
-                      12.130.3.10
+                      12.130.3.9
                       emacspeak-muggles-undo-only/undo-redo/body</a></li>
                       <li><a id=
                       "toc-emacspeak_002dmuggles_002dyank_002dpop_002fbody"
@@ -6456,7 +6448,7 @@
                       "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dyank_002dpop_002fbody"
                       name=
                       "toc-emacspeak_002dmuggles_002dyank_002dpop_002fbody">
-                      12.130.3.11
+                      12.130.3.10
                       emacspeak-muggles-yank-pop/body</a></li>
                     </ul>
                   </li>
@@ -11087,12 +11079,20 @@
                       12.222.3.3
                       emacspeak-muggles-m-player/body</a></li>
                       <li><a id=
+                      "toc-emacspeak_002dmuggles_002dorg_002dnav_002fbody"
+                      href=
+                      "extra_002dmuggles.html#emacspeak_002dmuggles_002dorg_002dnav_002fbody"
+                      name=
+                      "toc-emacspeak_002dmuggles_002dorg_002dnav_002fbody">
+                      12.222.3.4
+                      emacspeak-muggles-org-nav/body</a></li>
+                      <li><a id=
                       "toc-emacspeak_002dmuggles_002doutliner_002fbody"
                       href=
                       "extra_002dmuggles.html#emacspeak_002dmuggles_002doutliner_002fbody"
                       name=
                       "toc-emacspeak_002dmuggles_002doutliner_002fbody">
-                      12.222.3.4
+                      12.222.3.5
                       emacspeak-muggles-outliner/body</a></li>
                       <li><a id=
                       "toc-emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd"
@@ -11100,7 +11100,7 @@
                       "extra_002dmuggles.html#emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd"
                       name=
                       "toc-emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd">
-                      12.222.3.5
+                      12.222.3.6
                       emacspeak-muggles-pianobar-key-map-cmd</a></li>
                       <li><a id=
                       "toc-emacspeak_002dmuggles_002dsmartparens_002fbody"
@@ -11108,7 +11108,7 @@
                       "extra_002dmuggles.html#emacspeak_002dmuggles_002dsmartparens_002fbody"
                       name=
                       "toc-emacspeak_002dmuggles_002dsmartparens_002fbody">
-                      12.222.3.6
+                      12.222.3.7
                       emacspeak-muggles-smartparens/body</a></li>
                       <li><a id=
                       "toc-emacspeak_002dmuggles_002dview_002fbody"
@@ -11116,13 +11116,13 @@
                       "extra_002dmuggles.html#emacspeak_002dmuggles_002dview_002fbody"
                       name=
                       "toc-emacspeak_002dmuggles_002dview_002fbody">
-                      12.222.3.7
+                      12.222.3.8
                       emacspeak-muggles-view/body</a></li>
                       <li><a id=
                       "toc-emacspeak_002dorigami_002fbody" href=
                       "extra_002dmuggles.html#emacspeak_002dorigami_002fbody"
                       name=
-                      "toc-emacspeak_002dorigami_002fbody">12.222.3.8
+                      "toc-emacspeak_002dorigami_002fbody">12.222.3.9
                       emacspeak-origami/body</a></li>
                     </ul>
                   </li>
