--- a/manual/toy_002dbraille.html
+++ b/manual/toy_002dbraille.html
@@ -79,8 +79,8 @@
     <p>or</p>
     <p>M-: (set-default-font
     "-*-clearlyu-*-*-*-*-*-*-*-*-*-*-iso10646-*")</p>
-    <p>(it will only work if the relative font is installed and
-    properly configured).</p>
+    <p>(only works if the relative font is installed and properly
+    configured).</p>
   </div>
 </body>
 </html>
