--- a/manual/extra_002dmuggles.html
+++ b/manual/extra_002dmuggles.html
@@ -97,6 +97,8 @@
     <div class="subsection" id="Extra-Muggles">
       <h4 class="subsection">12.222.2 Extra Muggles</h4>
       <ul>
+        <li>org-mode structure nav: <kbd>C-c C-SPC</kbd> Navigation
+        for org-mode.</li>
         <li>View-Mode: <kbd>C-. v</kbd> Temporarily behave like
         view-mode.</li>
         <li>SmartParens: <kbd>C-c ,</kbd> Smart Parens</li>
@@ -133,19 +135,22 @@
         <li><a href=
         "#emacspeak_002dmuggles_002dm_002dplayer_002fbody"
         accesskey="3">emacspeak-muggles-m-player/body</a></li>
+        <li><a href=
+        "#emacspeak_002dmuggles_002dorg_002dnav_002fbody"
+        accesskey="4">emacspeak-muggles-org-nav/body</a></li>
         <li><a href="#emacspeak_002dmuggles_002doutliner_002fbody"
-        accesskey="4">emacspeak-muggles-outliner/body</a></li>
+        accesskey="5">emacspeak-muggles-outliner/body</a></li>
         <li><a href=
         "#emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd"
         accesskey=
-        "5">emacspeak-muggles-pianobar-key-map-cmd</a></li>
+        "6">emacspeak-muggles-pianobar-key-map-cmd</a></li>
         <li><a href=
         "#emacspeak_002dmuggles_002dsmartparens_002fbody"
-        accesskey="6">emacspeak-muggles-smartparens/body</a></li>
+        accesskey="7">emacspeak-muggles-smartparens/body</a></li>
         <li><a href="#emacspeak_002dmuggles_002dview_002fbody"
-        accesskey="7">emacspeak-muggles-view/body</a></li>
+        accesskey="8">emacspeak-muggles-view/body</a></li>
         <li><a href="#emacspeak_002dorigami_002fbody" accesskey=
-        "8">emacspeak-origami/body</a></li>
+        "9">emacspeak-origami/body</a></li>
       </ul>
       <div class="subsubsection" id=
       "emacspeak_002dmuggles_002demacspeak_002dm_002dplayer_002dmode_002dmap_002dcmd">
@@ -329,8 +334,45 @@ The body can be accessed via ‘emacspeak-muggles-m-player/body’.
         </dl>
       </div>
       <div class="subsubsection" id=
-      "emacspeak_002dmuggles_002doutliner_002fbody">
+      "emacspeak_002dmuggles_002dorg_002dnav_002fbody">
         <h4 class="subsubsection">12.222.3.4
+        emacspeak-muggles-org-nav/body</h4>
+        <dl class="def">
+          <dt id=
+          "index-emacspeak_002dmuggles_002dorg_002dnav_002fbody">
+          <span class="category">Command:</span>
+          <span><strong>emacspeak-muggles-org-nav/body</strong>
+          <a href=
+          '#index-emacspeak_002dmuggles_002dorg_002dnav_002fbody'
+          class='copiable-anchor'>¶</a></span></dt>
+          <dd>
+            <span id=
+            "index-emacspeak_002dmuggles_002dorg_002dnav_002fbody-1">
+            </span>
+            <div class="format">
+              <pre class=
+              "format">Call the body in the "emacspeak-muggles-org-nav" hydra.
+
+The heads for the associated hydra are:
+
+"?":    ‘(emacspeak-hydra-self-help "emacspeak-muggles-org-nav")’,
+"SPC":    ‘emacspeak-outline-speak-this-heading’,
+"n":    ‘emacspeak-outline-speak-next-heading’,
+"p":    ‘emacspeak-outline-speak-previous-heading’,
+"f":    ‘org-forward-heading-same-level’,
+"b":    ‘org-backward-heading-same-level’,
+"u":    ‘outline-up-heading’,
+"g":    ‘org-goto’
+
+The body can be accessed via ‘emacspeak-muggles-org-nav/body’.
+</pre>
+            </div>
+          </dd>
+        </dl>
+      </div>
+      <div class="subsubsection" id=
+      "emacspeak_002dmuggles_002doutliner_002fbody">
+        <h4 class="subsubsection">12.222.3.5
         emacspeak-muggles-outliner/body</h4>
         <dl class="def">
           <dt id=
@@ -383,7 +425,7 @@ The body can be accessed via ‘emacspeak-muggles-outliner/body’.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd">
-        <h4 class="subsubsection">12.222.3.5
+        <h4 class="subsubsection">12.222.3.6
         emacspeak-muggles-pianobar-key-map-cmd</h4>
         <dl class="def">
           <dt id=
@@ -410,7 +452,7 @@ The body can be accessed via ‘emacspeak-muggles-outliner/body’.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dmuggles_002dsmartparens_002fbody">
-        <h4 class="subsubsection">12.222.3.6
+        <h4 class="subsubsection">12.222.3.7
         emacspeak-muggles-smartparens/body</h4>
         <dl class="def">
           <dt id=
@@ -470,7 +512,7 @@ The body can be accessed via ‘emacspeak-muggles-smartparens/body’.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dmuggles_002dview_002fbody">
-        <h4 class="subsubsection">12.222.3.7
+        <h4 class="subsubsection">12.222.3.8
         emacspeak-muggles-view/body</h4>
         <dl class="def">
           <dt id="index-emacspeak_002dmuggles_002dview_002fbody">
@@ -549,7 +591,7 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dorigami_002fbody">
-        <h4 class="subsubsection">12.222.3.8
+        <h4 class="subsubsection">12.222.3.9
         emacspeak-origami/body</h4>
         <dl class="def">
           <dt id="index-emacspeak_002dorigami_002fbody">
