--- a/manual/ladspa.html
+++ b/manual/ladspa.html
@@ -68,13 +68,11 @@
     <p>This module uses tools from the Ladspa SDK to expose Ladspa
     plugins in a consistent way to elisp. The goal is to make it
     easy to inspect Ladspa Plugins, And invoke them easily from
-    Ladspa host applications such as MPlayer. See <a href=
-    "http://emacspeak.blogspot.com/2015/12/a-ladspa-work-bench-for-emacspeak.html">
-    http://emacspeak.blogspot.com/2015/12/a-ladspa-work-bench-for-emacspeak.html</a>
-    Some Ladspa Packages that provide plugins: sudo apt-get install
-    zam-plugins wah-plugins vco-plugins tap-plugins swh-plugins
-    rev-plugins mcp-plugins liquidsoap-plugin-ladspa
-    ladspa-foo-plugins invada-studio-plugins-ladspa fil-plugins</p>
+    Ladspa host applications such as MPlayer. Some Ladspa Packages
+    that provide plugins: sudo apt-get install zam-plugins
+    wah-plugins vco-plugins tap-plugins swh-plugins rev-plugins
+    mcp-plugins liquidsoap-plugin-ladspa ladspa-foo-plugins
+    invada-studio-plugins-ladspa fil-plugins</p>
     <ul class="section-toc">
       <li><a href="#Ladspa-Commands" accesskey="1">Ladspa
       Commands</a></li>
