--- a/manual/emacspeak_002dslime.html
+++ b/manual/emacspeak_002dslime.html
@@ -25,8 +25,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dsmart_002dwindow.html" rel="next"
-  title="emacspeak-smart-window" />
+  <link href="emacspeak_002dsmartparens.html" rel="next" title=
+  "emacspeak-smartparens" />
   <link href="emacspeak_002dshx.html" rel="prev" title=
   "emacspeak-shx" />
   <style type="text/css">
@@ -56,9 +56,9 @@
 <body lang="en" xml:lang="en">
   <div class="section" id="emacspeak_002dslime">
     <div class="header">
-      <p>Next: <a href="emacspeak_002dsmart_002dwindow.html"
-      accesskey="n" rel="next">emacspeak-smart-window</a>,
-      Previous: <a href="emacspeak_002dshx.html" accesskey="p" rel=
+      <p>Next: <a href="emacspeak_002dsmartparens.html" accesskey=
+      "n" rel="next">emacspeak-smartparens</a>, Previous: <a href=
+      "emacspeak_002dshx.html" accesskey="p" rel=
       "prev">emacspeak-shx</a>, Up: <a href=
       "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
       "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
