--- a/manual/emacspeak_002dsmartparens.html
+++ b/manual/emacspeak_002dsmartparens.html
@@ -27,8 +27,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dsolitaire.html" rel="next" title=
   "emacspeak-solitaire" />
-  <link href="emacspeak_002dsmart_002dwindow.html" rel="prev"
-  title="emacspeak-smart-window" />
+  <link href="emacspeak_002dslime.html" rel="prev" title=
+  "emacspeak-slime" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -58,8 +58,8 @@
     <div class="header">
       <p>Next: <a href="emacspeak_002dsolitaire.html" accesskey="n"
       rel="next">emacspeak-solitaire</a>, Previous: <a href=
-      "emacspeak_002dsmart_002dwindow.html" accesskey="p" rel=
-      "prev">emacspeak-smart-window</a>, Up: <a href=
+      "emacspeak_002dslime.html" accesskey="p" rel=
+      "prev">emacspeak-slime</a>, Up: <a href=
       "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
       "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
       "index.html#SEC_Contents" title="Table of contents" rel=
@@ -68,7 +68,7 @@
     </div>
     <hr />
     <span id="emacspeak_002dsmartparens-1"></span>
-    <h3 class="section">12.176 emacspeak-smartparens</h3>
+    <h3 class="section">12.175 emacspeak-smartparens</h3>
     <p>SMARTPARENS == Automatic insertion, wrapping and
     paredit-like navigation with user defined pairs this module
     speech-enables smartparens. Insertion of a matching delimiter
